--- a/hibernate-forms-web/src/main/webapp/WEB-INF/jspf/menu.jspf
+++ b/hibernate-forms-web/src/main/webapp/WEB-INF/jspf/menu.jspf
@@ -1,4 +1,5 @@
 <%-- any content can be specified here e.g.: --%>
+<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
 <%@ page pageEncoding="UTF-8" %>
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
@@ -9,13 +10,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Hibernate Forms</a>
+            
+            <a class="navbar-brand" href="<c:url value="/"/>">Hibernate Forms</a>
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li class="active"><a href="<c:url value="/"/>">Home</a></li>
+                <li><a href="<c:url value="/admin/addForm.htm"/>">Dodaj Ankietę</a></li>
+                <li><a href="<c:url value="/admin/addFormField.htm"/>">Dodaj Pole</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
